--- a/spotifyd/.config/spotifyd/spotifyd.conf
+++ b/spotifyd/.config/spotifyd/spotifyd.conf
@@ -74,7 +74,7 @@ initial_volume = "100"
 volume_normalisation = true
 
 # The normalisation pregain that is applied for each song.
-normalisation_pregain = -10
+# normalisation_pregain = -10
 
 # After the music playback has ended, start playing similar songs based on the previous tracks.
 autoplay = true
