--- a/bspwm/.config/bspwm/polybar/config
+++ b/bspwm/.config/bspwm/polybar/config
@@ -51,7 +51,7 @@ font-3 = "Hack Nerd Font:size=17;4"
 
 # Default
 modules-left = spacing BLD launcher BRD dot GLD cpu YPL memory CPL filesystem CRD dot ;MLD network ;MRD
-modules-center = LD bspwm RD mod
+modules-center = LD bspwm mod RD
 modules-right = RLD battery RRD dot GLD volume YPL brightness YRD dot BLD time BRD spacing
 
 spacing = 0
