--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,137 +1,62 @@
-# # Colors (One Darker)
-# colors:
-#   # Default colors
-#   primary:
-#     background: "#1E1E1E"
-#     # background: "#2E3440"
-#     foreground: "#D8DEE9"
-#
-#   # Normal colors
-#   normal:
-#     black: "#3B4252"
-#     red: "#D54646"
-#     green: "#23D18B"
-#     yellow: "#D7BA7D"
-#     blue: "#569CD6"
-#     magenta: "#C586C0"
-#     cyan: "#29B8DB"
-#     white: "#abb2bf"
-#
-#   # Bright colors
-#   bright:
-#     black: "#3B4252"
-#     red: "#D54646"
-#     green: "#23D18B"
-#     yellow: "#D7BA7D"
-#     blue: "#569CD6"
-#     magenta: "#C586C0"
-#     cyan: "#29B8DB"
-#     white: "#ECEFF4"
-#   # background_opacity: 1.0
-#
-
-#nord colors
-colors:
-  primary:
-    background: '#2e3440'
-    foreground: '#d8dee9'
-    dim_foreground: '#a5abb6'
-  cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
-  vi_mode_cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
-  selection:
-    text: CellForeground
-    background: '#4c566a'
-  search:
-    matches:
-      foreground: CellBackground
-      background: '#88c0d0'
-    bar:
-      background: '#434c5e'
-      foreground: '#d8dee9'
-  normal:
-    black: '#3b4252'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#88c0d0'
-    white: '#e5e9f0'
-  bright:
-    black: '#4c566a'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#8fbcbb'
-    white: '#eceff4'
-  dim:
-    black: '#373e4d'
-    red: '#94545d'
-    green: '#809575'
-    yellow: '#b29e75'
-    blue: '#68809a'
-    magenta: '#8c738c'
-    cyan: '#6d96a5'
-    white: '#aeb3bb'
-
-font:
-  # The normal (roman) font face to use.
-  normal:
-    family: Hack Nerd Font
-    # Style can be specified to pick a specific face.
-    style: Regular
-
-  # The bold font face
-  bold:
-    family: Hack Nerd Font
-    # Style can be specified to pick a specific face.
-    # style: Bold
-
-  # The italic font face
-  italic:
-    family: Hack Nerd Font
-    # Style can be specified to pick a specific face.
-    # style: Italic
-  size: 12.0
-
-  offset:
-    x: 0
-    y: 0
-  glyph_offset:
-    x: 0
-    y: 0
 window:
   padding:
-    x: 2
-    y: 2
-  # scrolling:
-  #   # Maximum number of lines in the scrollback buffer.
-  #   # Specifying '0' will disable scrolling.
+    x: 5
+    y: 5
+  class:
+    instance: Alacritty
+    general: Alacritty
+  opacity: 1
+
+scrolling:
   history: 10000
-  #   # Number of lines the viewport will move for every line scrolled when
-  #   # scrollback is enabled (history > 0).
-  #   multiplier: 10
+  multiplier: 3
 
-  # # If `true`, bold text is drawn using the bright color variants.
-  # draw_bold_text_with_bright_colors: true
 
-  # selection:
-  semantic_escape_chars: ',│`|:"'' ()[]{}<>'
-  save_to_clipboard: true
-  live_config_reload: true
+font:
+  normal:
+    family: Hack Nerd Font
+    style:  Medium
+  bold:
+    family: Hack Nerd Font
+    style:  Bold
+  italic:
+    family: Hack Nerd Font
+    style:  MediumItalic
+  bold_italic:
+    family: Hack Nerd Font
+    style: BoldItalic
+  size: 12
+draw_bold_text_with_bright_colors: true
+
+colors:
+  primary:
+    background: "#11121D"
+    foreground: "#a9b1d6"
+  normal:
+    black: "#32344a"
+    red: "#f7768e"
+    green: "#9ece6a"
+    yellow: "#e0af68"
+    blue: "#7aa2f7"
+    magenta: "#ad8ee6"
+    cyan: "#449dab"
+    white: "#787c99"
+  bright:
+    black: "#444b6a"
+    red: "#ff7a93"
+    green: "#b9f27c"
+    yellow: "#ff9e64"
+    blue: "#7da6ff"
+    magenta: "#bb9af7"
+    cyan: "#0db9d7"
+    white: "#acb0d0"
+
+selection:
+  save_to_clipboard: false
+
+shell:
+  program: /usr/bin/zsh
+
 key_bindings:
-  - { key: V, mods: Control|Shift, action: Paste }
-  - { key: C, mods: Control|Shift, action: Copy }
-  - { key: Key0, mods: Control, action: ResetFontSize }
-  - { key: Equals, mods: Control, action: IncreaseFontSize }
-  # - { key: Add, mods: Control, action: IncreaseFontSize }
-  # - { key: Subtract, mods: Control, action: DecreaseFontSize }
-  - { key: Minus, mods: Control, action: DecreaseFontSize }
-  - { key: N, mods: Control, action: SpawnNewInstance }
+  - { key: Return, mods: Super|Shift, action: SpawnNewInstance }
 
