--- a/spotifyd/.config/spotifyd/spotifyd.conf
+++ b/spotifyd/.config/spotifyd/spotifyd.conf
@@ -46,7 +46,7 @@ backend = "pulseaudio" # use portaudio for macOS [homebrew]
 # volume_controller = "alsa"  # use softvol for macOS
 
 # A command that gets executed in your shell after each song changes.
-on_song_change_hook = "song_notify"
+on_song_change_hook = "~/.config/spotifyd/song_notify.sh"
 
 # The name that gets displayed under the connect tab on
 # official clients. Spaces are not allowed!
