--- a/bspwm/.config/bspwm/polybar/config
+++ b/bspwm/.config/bspwm/polybar/config
@@ -50,9 +50,9 @@ font-2 = "Hack Nerd Font:size=17;4"
 font-3 = "Hack Nerd Font:size=17;4"
 
 # Default
-modules-left = spacing BLD launcher BRD dot GLD cpu YPL memory CPL filesystem CRD dot MLD ip MRD ;wired-network ;network 
+modules-left = spacing BLD launcher BRD spacing ;dot GLD cpu YPL memory CPL filesystem CRD spacing ;dot MLD ip MRD ;wired-network ;network 
 modules-center = LD bspwm mod RD
-modules-right = CLD cava CRD spacing RLD battery RRD dot GLD volume GRD ;YPL brightness ;YRD dot BLD xkeyboard BRD dot BLD time BRD spacing
+modules-right = CLD cava CRD spacing RLD battery RRD spacing ;dot GLD volume GRD ;YPL brightness ;YRD spacing ;dot BLD xkeyboard BRD spacing ;dot BLD time BRD spacing
 
 spacing = 0
 dim-value = 1.0
