--- a/bspwm/.config/bspwm/polybar/config
+++ b/bspwm/.config/bspwm/polybar/config
@@ -52,7 +52,7 @@ font-3 = "Hack Nerd Font:size=17;4"
 # Default
 modules-left = spacing BLD launcher BRD spacing ;dot GLD cpu YPL memory CPL filesystem CRD spacing ;dot MLD ip MRD ;wired-network ;network 
 modules-center = LD bspwm mod RD
-modules-right = CLD cava CRD spacing RLD battery RRD spacing ;dot GLD volume GRD ;YPL brightness ;YRD spacing ;dot BLD xkeyboard BRD spacing ;dot BLD time BRD spacing
+modules-right = CLD prev-song cava next-song CRD spacing RLD battery RRD spacing ;dot GLD volume GRD ;YPL brightness ;YRD spacing ;dot BLD xkeyboard BRD spacing ;dot BLD time BRD spacing
 
 spacing = 0
 dim-value = 1.0
