--- a/bspwm/.config/bspwm/polybar/config
+++ b/bspwm/.config/bspwm/polybar/config
@@ -117,7 +117,7 @@ font-2 = "Hack Nerd Font:size=17;4"
 font-3 = "Hack Nerd Font:size=17;4"
 
 # Default
-modules-left = 
+modules-left = spacing BLD full-time BRD 
 modules-center = LD bspwm mod RD
 modules-right = BLD xkeyboard BRD spacing
 
