--- a/spotifyd/.config/spotifyd/spotifyd.conf
+++ b/spotifyd/.config/spotifyd/spotifyd.conf
@@ -11,7 +11,8 @@ username = "eyal670"
 #
 # This is an alternative to the `password` field. Both
 # can't be used simultaneously.
-password_cmd = "pass spotify"
+# password_cmd = "pass spotify"
+password_cmd = "~/.config/spotifyd/scripts/passme_spotify.sh"
 
 # If set to true, `spotifyd` tries to look up your
 # password in the system's password storage.
