tmux - update config file

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,5 @@
+# reload tmux envirment: `tmux source-file ~/.tmux.conf`
+
 set-option -g default-shell /bin/zsh
 set -g mouse on
 
@@ -8,7 +10,26 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @continuum-restore 'on'
+# for restoring neovim session
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
 
+# keybindings
+bind-key C-w kill-window
+# bind-key C-x confirm-before kill-session
+bind-key C-x \
+    if-shell '[ "$(tmux display -p "#{session_many_attached}")" -gt 0 ]' {
+        # the session is attached to multiple clients, so we can just switch the client to a different session.
+        choose-session
+    } {
+        # we are the last client attached to this session; kill it.
+        # we need to use `run-shell` to ensure that the current session number is expanded *before* we switch to the new session.
+        confirm -p 'Kill #S (y/n)?' {
+            choose-tree -s {
+                run-shell 'tmux switch-client -t "%%" \; kill-session -t "#S"'
+            }
+        }
+    }
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
