tmux - change prefix key

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,22 +1,17 @@
 # reload tmux envirment: `tmux source-file ~/.tmux.conf`
 
-set-option -g default-shell /bin/zsh
-set -g mouse on
+## keybindings
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
 
-set -g @continuum-restore 'on'
-# for restoring neovim session
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
-
-# keybindings
 bind-key C-w kill-window
-# bind-key C-x confirm-before kill-session
+
+# kill session and switch to another
 bind-key C-x \
     if-shell '[ "$(tmux display -p "#{session_many_attached}")" -gt 0 ]' {
         # the session is attached to multiple clients, so we can just switch the client to a different session.
@@ -24,12 +19,33 @@ bind-key C-x \
     } {
         # we are the last client attached to this session; kill it.
         # we need to use `run-shell` to ensure that the current session number is expanded *before* we switch to the new session.
-        confirm -p 'Kill #S (y/n)?' {
+        confirm -p 'Kill "#S" session (y/n)?' {
             choose-tree -s {
                 run-shell 'tmux switch-client -t "%%" \; kill-session -t "#S"'
             }
         }
     }
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+
+
+## List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+
+## set settings
+set-option -g default-shell /bin/zsh
+set -g mouse on
+set -g @continuum-restore 'on'
+# for restoring neovim session
+set -g @resurrect-strategy-nvim 'session'
+# set -g @resurrect-capture-pane-contents 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
