--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,14 +30,16 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
-
+## End of keybindings
 
 
 ## List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'wfxr/tmux-power'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
+## End of plugins
 
 ## set settings
 set-option -g default-shell /bin/zsh
@@ -46,6 +48,11 @@ set -g @continuum-restore 'on'
 # for restoring neovim session
 set -g @resurrect-strategy-nvim 'session'
 # set -g @resurrect-capture-pane-contents 'on'
+
+# power theme settings - https://github.com/wfxr/tmux-power
+set -g @tmux_power_theme 'sky'
+set -g @tmux_power_date_format '%d/%m/%Y'
+## End of settings
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
