tmux - create new session with <prefix> S

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,9 @@ bind r source-file ~/.tmux.conf
 
 bind-key C-w kill-window
 
+# create new session
+bind-key S command-prompt -p "New Session:" "new-session -A -s '%%'"
+
 # kill session and switch to another
 bind-key C-x \
     if-shell '[ "$(tmux display -p "#{session_many_attached}")" -gt 0 ]' {
