--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,9 @@ bind r source-file ~/.tmux.conf
 
 bind-key C-w kill-window
 
+# move between windows
+bind-key b previous-window 
+
 # create new session
 bind-key S command-prompt -p "New Session:" "new-session -A -s '%%'"
 
