--- a/bspwm/.config/bspwm/polybar/config
+++ b/bspwm/.config/bspwm/polybar/config
@@ -48,11 +48,12 @@ font-0 = "Hack Nerd Font:size=10;3"
 font-1 = "Hack Nerd Font:size=8;3"
 font-2 = "Hack Nerd Font:size=17;4"
 font-3 = "Hack Nerd Font:size=17;4"
+font-4 = "Hack Nerd Font:size=12;4"
 
 # Default
 modules-left = spacing BLD launcher pacman-updates aur-updates list-orphans BRD spacing ;dot GLD cpu YPL memory CPL filesystem CRD spacing ;dot MLD ip MRD ;wired-network ;network 
 modules-center = LD bspwm mod RD
-modules-right = CLD prev-song cava next-song CRD spacing RLD battery RRD spacing ;dot GLD volume GRD ;YPL brightness ;YRD spacing ;dot BLD xkeyboard BRD spacing ;dot BLD time BRD spacing
+modules-right =  BLD trackingtime-today BRD spacing CLD prev-song cava next-song CRD spacing RLD battery RRD spacing ;dot GLD volume GRD ;YPL brightness ;YRD spacing ;dot BLD xkeyboard BRD spacing ;dot BLD time BRD spacing
 
 spacing = 0
 dim-value = 1.0
