--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,7 +39,7 @@ unbind %
 ## End of keybindings
 
 
-## List of plugins
+## List of plugins - first clone tpm with: "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
