tmux.conf - add some notes for plugins installation

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,8 +38,11 @@ unbind '"'
 unbind %
 ## End of keybindings
 
-
+## Manage tmux plugins with TPM
 ## List of plugins - first clone tpm with: "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
+## than add any plugin with set -g @plugin '{{github hadle}}'
+## after saving exit tmux if already running and run {prefix}+I to install plugins
+## see tmp repo for more options
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
