update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ spotifyd/.config/spotifyd/scripts/passme_spotify.sh
 systemd/.config/systemd/user/default.target.wants
 tmux/.tmux/resurrect
 tmux/.tmux/plugins
+
+nvim/.config/nvim/plugin/packer_compiled.lua
