--- a/spotifyd/.config/spotifyd/scripts/song_notify/.env_template
+++ b/spotifyd/.config/spotifyd/scripts/song_notify/.env_template
@@ -1,3 +1,4 @@
+# create your api keys here: https://developer.spotify.com/dashboard/
 # set your api keys here and rename the file to ".env"
 CLIENT_ID=your-spotify-client-id
 CLIENT_SECRET=your-spotify-secret
