tmux - add comment

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,7 @@ bind-key C-a send-prefix
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
+# kill a window
 bind-key C-w kill-window
 
 # move between windows
