tmux - query cheat.sh with tmux key-bind r

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,9 @@ bind r source-file ~/.tmux.conf
 # kill a window
 bind-key C-w kill-window
 
+# query cheat.sh
+bind-key -r i run-shell "tmux display-popup -E bash /home/eyal/.dotfiles/bspwm/.config/bspwm/scripts/cheat.sh"
+
 # move between windows
 bind-key b previous-window 
 
