cheat.sh - make it possible to run outside of tmux
cheat.sh tmux - don't output results to tmux if running without tmux option

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,7 +13,7 @@ bind r source-file ~/.tmux.conf
 bind-key C-w kill-window
 
 # query cheat.sh
-bind-key -r i run-shell "tmux display-popup -w 80% -h 80% -E bash ~/.dotfiles/bspwm/.config/bspwm/scripts/cheat.sh"
+bind-key -r i run-shell "tmux display-popup -w 80% -h 80% -E bash ~/.dotfiles/bspwm/.config/bspwm/scripts/cheat.sh tmux"
 
 # move between windows
 bind-key b previous-window 
