tmux - add options for better nvim support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -65,6 +65,12 @@ set -g @resurrect-strategy-nvim 'session'
 # power theme settings - https://github.com/wfxr/tmux-power
 set -g @tmux_power_theme 'sky'
 set -g @tmux_power_date_format '%d/%m/%Y'
+
+# nvim settings
+set-option -sg escape-time 10
+set-option -g focus-events on
+set -ag terminal-overrides ",tmux-256color:RGB"
+
 ## End of settings
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
