tmux - don't detach on session kill

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -71,6 +71,9 @@ set-option -sg escape-time 150
 set-option -g focus-events on
 set -ag terminal-overrides ",tmux-256color:RGB"
 
+# don't detach on kill session
+set-option -g detach-on-destroy off
+
 ## End of settings
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
