add css snippets to scss

--- a/nvim/.config/nvim/snippets/package.json
+++ b/nvim/.config/nvim/snippets/package.json
@@ -15,6 +15,10 @@
         "path": "./css.json"
       },
       {
+        "language": "scss",
+        "path": "./css.json"
+      },
+      {
         "language": "javascript",
         "path": "./javascript.json"
       },
