--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ tmux/.tmux/resurrect
 tmux/.tmux/plugins
 
 nvim/.config/nvim/plugin/packer_compiled.lua
+nvim/.config/nvim/doc/tags
+nvim/.config/nvim/lazy-lock.json
