tmux - truecolor setup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,7 +69,9 @@ set -g @tmux_power_date_format '%d/%m/%Y'
 # nvim settings
 set-option -sg escape-time 150
 set-option -g focus-events on
-set -ag terminal-overrides ",tmux-256color:RGB"
+
+# true colors
+set -as terminal-features ",alacritty*:RGB"
 
 # don't detach on kill session
 set-option -g detach-on-destroy off
