--- a/spotifyd/.config/spotifyd/spotifyd.conf
+++ b/spotifyd/.config/spotifyd/spotifyd.conf
@@ -47,7 +47,7 @@ backend = "pulseaudio" # use portaudio for macOS [homebrew]
 # volume_controller = "alsa"  # use softvol for macOS
 
 # A command that gets executed in your shell after each song changes.
-on_song_change_hook = "~/.config/spotifyd/scripts/song_notify/song_notify.py"
+# on_song_change_hook = "~/.config/spotifyd/scripts/song_notify/song_notify.py"
 
 # The name that gets displayed under the connect tab on
 # official clients. Spaces are not allowed!
