--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -71,7 +71,7 @@ set-option -sg escape-time 150
 set-option -g focus-events on
 
 # true colors
-set -as terminal-features ",alacritty*:RGB"
+set -sa terminal-overrides ",xterm*:Tc"
 
 # don't detach on kill session
 set-option -g detach-on-destroy off
