tmux - set true colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -71,7 +71,8 @@ set-option -sg escape-time 150
 set-option -g focus-events on
 
 # true colors
-set -sa terminal-overrides ",xterm*:Tc"
+# set -sa terminal-overrides ",xterm*:Tc"
+set-option -sa terminal-features ',alacritty:RGB'
 
 # don't detach on kill session
 set-option -g detach-on-destroy off
