alacritty - config migrate

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -56,7 +56,7 @@ multiplier = 3
 [selection]
 save_to_clipboard = false
 
-[shell]
+[terminal.shell]
 program = "/usr/bin/zsh"
 
 [window]
@@ -69,3 +69,5 @@ instance = "Alacritty"
 [window.padding]
 x = 5
 y = 5
+
+[terminal]
