--- a/bspwm/.config/bspwm/picom.conf
+++ b/bspwm/.config/bspwm/picom.conf
@@ -40,7 +40,9 @@ wintypes:
 opacity-rule = [
     "98:class_g = 'Rofi'",
     "98:class_g = 'Alacritty' && focused",
-    "70:class_g = 'Alacritty' && !focused"
+    "70:class_g = 'Alacritty' && !focused",
+    "98:class_g = 'com.mitchellh.ghostty' && focused",
+    "70:class_g = 'com.mitchellh.ghostty' && !focused"
 ];
 
 shadow = false;
