tmux - set vim keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,12 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# bind vim keys
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
