--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ tmux/.tmux/plugins
 nvim/.config/nvim/plugin/packer_compiled.lua
 nvim/.config/nvim/doc/tags
 nvim/.config/nvim/lazy-lock.json
+nvim/.config/nvim-BAK
