polybar - active screen-timeout-toggle btn

--- a/bspwm/.config/bspwm/polybar/config
+++ b/bspwm/.config/bspwm/polybar/config
@@ -54,7 +54,7 @@ font-5 = "Hack Nerd Font:size=14;4"
 # Default
 modules-left = spacing BLD launcher pacman-updates aur-updates list-orphans BRD spacing ;dot GLD cpu YPL memory CPL filesystem CRD spacing ;dot MLD ip MRD ;wired-network ;network 
 modules-center = LD bspwm mod RD
-modules-right =  CLD prev-song cava next-song CRD spacing RLD battery RRD spacing ;dot GLD volume GRD ;YPL brightness ;YRD spacing ;dot BLD xkeyboard BRD spacing ;dot ;BLD ;profile-switcher ;toggle_screen_timer ;BRD spacing ;dot BLD trackingtime-today time BRD spacing
+modules-right =  CLD prev-song cava next-song CRD spacing RLD battery RRD spacing ;dot GLD volume GRD ;YPL brightness ;YRD spacing ;dot BLD xkeyboard BRD spacing ;dot BLD ;profile-switcher toggle_screen_timer BRD spacing ;dot BLD trackingtime-today time BRD spacing
 
 spacing = 0
 dim-value = 1.0
