picom - exclude Gromit-MPX from triggering blur-background

--- a/bspwm/.config/bspwm/picom.conf
+++ b/bspwm/.config/bspwm/picom.conf
@@ -8,6 +8,7 @@ frame-opacity = 1;
 inactive-opacity-override = false;
 blur-background = true;
 blur-background-exclude = [
+  "class_g = 'Gromit-mpx'"
 ];
  
 # Fading
